--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -21,6 +21,13 @@
 
   <dependencies>
     <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-translate</artifactId>
+        <version>1.70.0</version>
+    </dependency>
+
+    <!-- Josn -->
+    <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
         <version>2.9.0</version>
