--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -41,6 +41,13 @@
         <version>2.9.0</version>
     </dependency>
 
+    <!-- Jsoup -->
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.14.2</version>
+    </dependency>
+
     <!-- Java Servlets API -->
     <dependency>
       <groupId>javax.servlet</groupId>
